--- a/android-engineer.html
+++ b/android-engineer.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mailchimp/jobs/1936176'>Job Application for Android Engineer at Mailchimp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mailchimp/jobs/1936176'>Job Application for Android Engineer at Mailchimp</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -131,7 +131,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -165,7 +165,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698025129-senior-android-engineer-blablalines-open-to-remote-from-france-'>BlaBlaCar Senior Android Engineer - BlaBlaLines -  (Open to remote from France) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698025129-senior-android-engineer-blablalines-open-to-remote-from-france-'>BlaBlaCar Senior Android Engineer - BlaBlaLines -  (Open to remote from France) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France France Paris, France</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -181,7 +181,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/o4robfwO'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/o4robfwO'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -238,7 +238,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dahmakan/jobs/4005607002'>Job Application for Android Engineer at dahmakan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dahmakan/jobs/4005607002'>Job Application for Android Engineer at dahmakan</a></h5> 
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -295,7 +295,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341155-senior-android-engineer-m-f-d-hamburg'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Hamburg | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341155-senior-android-engineer-m-f-d-hamburg'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Hamburg | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg  Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -338,7 +338,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/galileo/jobs/4478126002'>Job Application for Android Engineer at Galileo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/galileo/jobs/4478126002'>Job Application for Android Engineer at Galileo</a></h5> 
 <p><span class="badge badge-light">United States  NYC</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -354,11 +354,11 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London  London Oxford</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mapboxminsk/jobs/1900188'>Job Application for Android Engineer, Search at Mapbox Minsk</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mapboxminsk/jobs/1900188'>Job Application for Android Engineer, Search at Mapbox Minsk</a></h5> 
 <p><span class="badge badge-light">Minsk  Minsk Minsk</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697169483-senior-android-engineer-ui-systems'>Square Senior Android Engineer, UI Systems | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697169483-senior-android-engineer-ui-systems'>Square Senior Android Engineer, UI Systems | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -378,7 +378,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999696938629-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999696938629-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -440,7 +440,7 @@ Android Platform Engineer at TomTom in  | Android jobs | 42jobs.io
 <p>4 days ago ... Android software engineer at Greenlight, a financial technology company with a 
 mission to help parents teach financial literacy to kids.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1857013'>Job Application for Sr. Android Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1857013'>Job Application for Sr. Android Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -450,7 +450,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tribalscale.workable.com/j/3ABCE94131'>TribalScale - Jobs: Android Engineer - Toronto - Apply online</a></h5> 
+<h5><a href='https://tribalscale.workable.com/j/3ABCE94131'>TribalScale - Jobs: Android Engineer - Toronto - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
